# aseprite

./: .clang-format  .gitmodules  CMakeLists.txt  class_map.md
cmake/: FindBaseDeps.cmake  FindDeps.cmake  FindJpegTurbo.cmake  FindTests.cmake
data/: gui.xml  pref.xml
data/extensions/aseprite-theme/: theme.xml
data/strings/: en.ini
data/widgets/: about_extension.xml  debugger.xml  feedback.xml  file_selector.xml  new_layout.xml  options.xml  runner.xml  script_access.xml  zoo.xml
docs/: LICENSES.md
src/app/: CMakeLists.txt  app.cpp  app.h  app_menus.cpp  closed_docs.cpp  console.cpp  console.h  context.cpp  context.h  context_flags.cpp  context_flags.h  doc.cpp  doc.h  doc_api.cpp  doc_api.h  doc_api_dnd_helper.cpp  doc_api_dnd_helper.h  doc_diff.cpp  doc_exporter.cpp  doc_exporter.h  doc_range_ops.cpp  doc_range_ops.h  doc_undo.cpp  doc_undo.h  docs.cpp  docs.h  extensions.cpp  extensions.h  extensions_tests.cpp  extra_cel.cpp  extra_cel.h  file_selector.cpp  file_selector.h  file_system.cpp  filename_formatter.cpp  flatten.cpp  gui_xml.cpp  gui_xml.h  ini_file.cpp  ini_file.h  (+37 more)
src/app/cli/: app_options.cpp  app_options.h  cli_processor.cpp
src/app/cmd/: set_audio.cpp  set_audio.h
src/app/commands/: cmd_about.cpp  cmd_advanced_mode.cpp  cmd_background_from_layer.cpp  cmd_cancel.cpp  cmd_canvas_size.cpp  cmd_cel_opacity.cpp  cmd_cel_properties.cpp  cmd_change_brush.cpp  cmd_change_pixel_format.cpp  cmd_clear_cel.cpp  cmd_close_file.cpp  cmd_color_quantization.cpp  cmd_copy_cel.cpp  cmd_crop.cpp  cmd_deselect_mask.cpp  cmd_discard_brush.cpp  cmd_duplicate_layer.cpp  cmd_duplicate_sprite.cpp  cmd_duplicate_view.cpp  cmd_enter_license.cpp  cmd_exit.cpp  cmd_export_sprite_sheet.cpp  cmd_export_sprite_sheet.h  cmd_eyedropper.cpp  cmd_fit_screen.cpp  cmd_flatten_layers.cpp  cmd_flip.cpp  cmd_flip.h  cmd_frame_properties.cpp  cmd_frame_tag_properties.cpp  cmd_fullscreen_mode.cpp  cmd_fullscreen_preview.cpp  cmd_goto_frame.cpp  cmd_goto_layer.cpp  cmd_goto_tab.cpp  cmd_grid.cpp  cmd_home.cpp  cmd_import_sprite_sheet.cpp  cmd_invert_mask.cpp  cmd_keyboard_shortcuts.cpp  (+105 more)
src/app/crash/: session.cpp  write_document.cpp
src/app/file/: ase_format.cpp  bmp_format.cpp  css_format.cpp  file.cpp  file.h  file_data.cpp  file_data.h  file_format.cpp  file_format.h  file_formats_manager.cpp  file_formats_manager.h  file_op_config.cpp  file_op_config.h  fli_format.cpp  gif_format.cpp  ico_format.cpp  jpeg_format.cpp  palette_file.cpp  pcx_format.cpp  png_format.cpp  psd_format.cpp  qoi_format.cpp  split_filename.cpp  svg_format.cpp  tga_format.cpp  webp_format.cpp
src/app/fonts/: font_data.cpp  font_data.h  font_info.cpp  font_info.h  font_path.cpp  fonts.cpp
src/app/i18n/: strings.cpp  strings.h  xml_translator.cpp
src/app/modules/: gfx.cpp  gfx.h  gui.cpp  palettes.cpp
src/app/pref/: preferences.cpp  preferences.h
src/app/render/: shader_renderer.cpp  shader_renderer.h  simple_renderer.cpp  simple_renderer.h
src/app/res/: http_loader.cpp  palettes_loader_delegate.cpp  palettes_loader_delegate.h  resources_loader.cpp
src/app/script/: about_extension_window.h  app_clipboard_object.cpp  app_fs_object.cpp  app_object.cpp  debugger.cpp  debugger.h  dialog_class.cpp  engine.cpp  engine.h  engine_functions.h  engine_tests.cpp  frame_class.cpp  image_class.cpp  json_class.cpp  layer_class.cpp  layers_class.cpp  palette_class.cpp  plugin_class.cpp  security.cpp  security.h  security_tests.cpp  sprite_class.cpp  tabs_widget.cpp  tabs_widget.h  websocket_class.cpp
src/app/tools/: active_tool.cpp  active_tool.h  ink_processing.h  ink_type.cpp  intertwine.cpp  intertwine.h  pick_ink.cpp  point_shape.cpp  point_shape.h  point_shapes.h  stroke.cpp  stroke.h  symmetry.cpp  symmetry.h  tool.h  tool_box.cpp  tool_box.h  tool_loop_manager.cpp  tool_loop_manager.h  velocity.cpp
src/app/ui/: alpha_entry.cpp  alpha_entry.h  alpha_slider.cpp  alpha_slider.h  app_menuitem.cpp  app_menuitem.h  backup_indicator.cpp  best_fit_criteria_selector.cpp  browser_view.cpp  browser_view.h  brush_popup.cpp  brush_popup.h  button_set.cpp  button_set.h  color_bar.cpp  color_bar.h  color_button.cpp  color_button.h  color_popup.cpp  color_popup.h  color_shades.cpp  color_sliders.cpp  color_sliders.h  configure_timeline_popup.cpp  context_bar.cpp  context_bar.h  devconsole_view.cpp  directory_tree.cpp  directory_tree.h  dithering_selector.cpp  dithering_selector.h  doc_view.cpp  doc_view.h  dock.cpp  dock.h  drop_down_button.cpp  dynamics_popup.cpp  dynamics_popup.h  export_file_window.cpp  export_file_window.h  (+107 more)
src/app/util/: audio.cpp  audio.h  autocrop.cpp  buffer_region.cpp  buffer_region.h  cel_ops.cpp  cel_ops.h  clipboard.cpp  clipboard.h  clipboard_native.cpp  conversion_to_image.cpp  conversion_to_surface.cpp  expand_cel_canvas.cpp  expand_cel_canvas.h  filetoks.cpp  layer_boundaries.cpp  layer_utils.cpp  msk_file.cpp  new_image_from_mask.cpp  open_file_job.cpp  pal_ops.cpp  pic_file.cpp  pixel_ratio.cpp  pixel_ratio.h  readable_time.cpp  render_text.cpp  render_text.h  resize_image.cpp  resize_image.h  shader_helpers.cpp  shader_helpers.h  slice_utils.cpp  tile_flags_utils.cpp  tiled_mode.cpp  tiled_mode.h  tileset_utils.cpp  tileset_utils.h  wrap_point.cpp  wrap_point.h
src/cfg/: CMakeLists.txt
src/dio/: aseprite_common.h  aseprite_decoder.cpp
src/doc/: algo.cpp  image.cpp  layer.cpp  layer_io.cpp  object.cpp  resize_image_tests.cpp  slices.cpp  slices.h  sprite.cpp  sprite.h  user_data.h
src/doc/algorithm/: resize_image.cpp  resize_image.h
src/main/: main.cpp
src/render/: CMakeLists.txt  bg_options.h  render.cpp
src/tests/: utils.h
src/ui/: CMakeLists.txt  combobox.cpp  combobox.h  devmode.cpp  devmode.h  entry.cpp  entry.h  graphics.cpp  graphics.h  image_view.h  int_entry.cpp  listbox.cpp  listbox.h  manager.cpp  message.h  separator.cpp  separator.h  shortcut.cpp  slider.cpp  slider.h  system.cpp  textedit.cpp  theme.cpp  theme.h  tooltips.cpp  ui.h  utf8_range_builder.h  widget.cpp  widget.h  widget_type.h  window.cpp
tests/scripts/: json.lua
(+93 files in other folders)
